--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,23 +14,24 @@
   <section class="upgrades-section">
     <h3>Delorean Upgrades</h3>
     <div class="upgrades">
-      <figure>
-        <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-        <figcaption>Flux Capacitor</figcaption>
-      </figure>
-      <figure>
-        <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
-        <figcaption>Flame Decals</figcaption>
-      </figure>
-      <figure>
-        <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
-        <figcaption>Bumper Stickers</figcaption>
-      </figure>
-      <figure>
-        <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
-        <figcaption>Hub Caps</figcaption>
-      </figure>
-    </div>
+        <div class="upgrade-card">
+            <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
+            <div class="upgrade-label">Flux Capacitor</div>
+        </div>
+        <div class="upgrade-card">
+            <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
+            <div class="upgrade-label">Flame Decals</div>
+        </div>
+        <div class="upgrade-card">
+            <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+            <div class="upgrade-label">Bumper Stickers</div>
+        </div>
+        <div class="upgrade-card">
+            <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
+        <div class="upgrade-label">Hub Caps</div>
+  </div>
+</div>
+
   </section>
 
   <section class="reviews-section">
