Trying to fix contrast issues

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,19 +16,19 @@
     <div class="upgrades">
         <div class="upgrade-card">
             <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-            <div class="upgrade-label">Flux Capacitor</div>
+            <p class="upgrade-label">Flux Capacitor</p>
         </div>
         <div class="upgrade-card">
             <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
-            <div class="upgrade-label">Flame Decals</div>
+            <p class="upgrade-label">Flame Decals</p>
         </div>
         <div class="upgrade-card">
             <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
-            <div class="upgrade-label">Bumper Stickers</div>
+            <p class="upgrade-label">Bumper Stickers</p>
         </div>
         <div class="upgrade-card">
             <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
-        <div class="upgrade-label">Hub Caps</div>
+        <p class="upgrade-label">Hub Caps</p>
   </div>
 </div>
 
