--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,19 +16,19 @@
     <div class="upgrades">
         <div class="upgrade-card">
             <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-            <p class="upgrade-label">Flux Capacitor</p>
+            <h3> class="upgrade-label">Flux Capacitor</h3>
         </div>
         <div class="upgrade-card">
             <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
-            <p class="upgrade-label">Flame Decals</p>
+            <h3> class="upgrade-label">Flame Decals</h3>
         </div>
         <div class="upgrade-card">
             <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
-            <p class="upgrade-label">Bumper Stickers</p>
+            <h3> class="upgrade-label">Bumper Stickers</h3>
         </div>
         <div class="upgrade-card">
             <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
-        <p class="upgrade-label">Hub Caps</p>
+        <h3> class="upgrade-label">Hub Caps</h3>
   </div>
 </div>
 
